--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,22 @@
 </head>
 <body>
     <canvas class="webgl"></canvas>
+    <div class="loading-bar"></div>
+
+    <div class="point point-0">
+        <div class="label">1</div>
+        <div class="text">The EVL (Efficient Velo Tools) Safe Zone Bike Helmet Mirror Review is about a mirror 2/2.5’ inches (in diameter) with a 4.5-inch arm.</div>
+    </div>
+
+    <div class="point point-1">
+        <div class="label">2</div>
+        <div class="text">It covers the top, back and front of your head and is set apart from similar helmets by its chin bar.</div>
+    </div>
+
+    <div class="point point-2">
+        <div class="label">3</div>
+        <div class="text">Oxygen pipes that purify air for the rider and We can be wear in any poiseness air.</div>
+    </div>
+
 </body>
 </html>
