other models add

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reallistic Model</title>
+    <title>Virtual Museum</title>
 </head>
 <body>
     <canvas class="webgl"></canvas>
@@ -23,6 +23,12 @@
         <div class="label">3</div>
         <div class="text">Oxygen pipes that purify air for the rider and We can be wear in any poiseness air.</div>
     </div>
+
+    <a href="./second-model.html">
+        <div class="right-angle">
+            <div class="label">&gt;</div>
+        </div>
+    </a>
 
 </body>
 </html>
